--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,46 @@
+/* ---------- ОБЩИЕ СТИЛИ: Разное ---------- */
+
+
 body {
-	font-family: "PT Sans Narrow", "Arial", serif;
+	position: relative;
+	min-width: 960px;
+	z-index: 1;
+
+	font-family: "PT Sans Narrow", "Arial", sans-serif;
 	font-size: 14px;
 	font-weight: bold;
 	line-height: 24px;
 	color: #000000;
+	text-transform: uppercase;
 
-	padding: 0;
-	margin: 0;
-	min-width: 960px;
+	background: #fbf8f5 url("../img/bg-pattern.jpg");
 }
 
-.catalogue-page {
+/* Классы-подкладки скриншотов для вёрстки пиксель-перфёкт */
+.catalogue-page::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+
 	background: url("../img/bg-screenshot-catalogue.jpg") no-repeat 50% 0;
+	opacity: 0.5;
 }
 
-.catalogue-item-page {
+.catalogue-item-page::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+
 	background: url("../img/bg-screenshot-catalogue-item.jpg") no-repeat 50% 0;
+	opacity: 0.5;
 }
 
 h1 {
@@ -26,9 +51,16 @@ h2 {
 	font-size: 24px;
 }
 
-figure {
+figure,
+img {
 	margin: 0;
 	padding: 0;
+}
+
+.container {
+	width: 940px;
+	padding: 0 10px;
+	margin: 0 auto;
 }
 
 .clearfix:after {
@@ -37,178 +69,500 @@ figure {
 	clear: both;
 }
 
+.btn,
+a.btn {
+	display: inline-block;
+	padding: 9px 28px;
+	border: none;
+	
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #ffffff;
+	background: rgba(0, 0, 0, 1);
+}
+
+.btn:hover {
+	background: #663d15;
+}
+
+
+/* ---------- ОБЩИЕ СТИЛИ: Шапка ---------- */
+
+
+
 .main-header {
 	margin-bottom: 58px;
 
-	background: rgba(255, 0, 0, 0.25);
+	background: rgba(0, 0, 0, 1);
 }
 
-.container {
-	width: 940px;
-	padding: 0 10px;
-	margin: 0 auto;
-
-	background: rgba(255, 0, 0, 0.25);
-}
-
-.inner-logo {
+.main-header-logo {
 	float: left;
-	min-height: 72px;
 	width: 150px;
-	margin-right: 10px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;
+	padding: 0;
 }
 
-.main-navigation {
+.main-header-logo a {
+	display: block;
+	width: 111px;
+	margin: 23px auto 0;
+}
+
+.main-header-navigation {
 	float: left;
-	min-height: 72px;
-	width: 540px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;
+	max-width: 550px;
 }
 
-.user-block {
+.main-header-navigation ul {
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+
+	font-size: 0;
+}
+
+.main-header-navigation li{
+	display: inline-block;
+	vertical-align: top;
+	margin: 0;
+
+	font-size: 16px;
+}
+
+.main-header-navigation a,
+.main-header-user-block a {
+	position: relative;
+	display: block;
+	padding: 23px 20px 25px;
+	margin: 0;
+	
+	color: #ffffff;
+	text-decoration: none;
+}
+
+.main-header-user-block {
 	float: right;
-	min-height: 72px;
-	width: 220px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;
+	max-width: 200px;
 }
 
-.inner-page-header {
-	min-height: 68px;
-	margin-bottom: 57px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;	
+.main-header-user-block a {
+	padding-left: 53px;
+	padding-right: 22px;
 }
 
-.page-content-left {
+.main-header-user-block a::before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 21px;
+	width: 18px;
+    height: 16px;
+    margin-top: -8px;
+
+    background: url("../img/sprite.png") no-repeat;
+    background-position: -50px -2px;
+    opacity: 0.3;
+}
+
+.main-header-navigation a:hover,
+.main-header-user-block a:hover {
+	background: #242424;
+}
+
+.main-header-user-block a:hover::before {
+	opacity: 1;
+}
+
+.main-header-navigation .current::after {
+	content: "";
+	position: absolute;
+	left: 20px;
+	right: 20px;
+	bottom: 0;
+	width: auto;
+	height: 4px;
+
+	background: #ffffff;
+}
+
+
+
+/* ---------- ОБЩИЕ СТИЛИ: Подвал ---------- */
+
+
+
+.main-footer {
+	margin-top: 49px;
+	padding-top: 56px;
+	padding-bottom: 37px;
+
+	color: #ffffff;
+
+	background: #202020 url("../img/bg-pattern-dark.jpg");
+}
+
+.main-footer p {
+	margin: 0 0 10px;
+	padding: 0;
+}
+
+.main-footer a {
+	color: #ffffff;	
+}
+
+.main-footer-contacts {
 	float: left;
-	min-height: 568px;
-	width: 210px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;
+	width: 320px;
+	margin-right: 60px;
 }
 
-.page-content-right {
+.main-footer-social {
+	float: left;
+	max-width: 340px;
+	padding: 0 20px;
+
+	text-align: center;
+}
+
+a.social-btn {
+	position: relative;
+	display: inline-block;
+	width: 43px;
+	height: 43px;
+	margin-right: 3px;
+
+	font-size: 0;
+
+	background: #000000;
+}
+
+a.social-btn:last-child {
+	margin-right: 0;
+}
+
+a.social-btn:hover {
+	background: #ffffff;
+}
+
+.social-btn::before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	background: url("../img/sprite.png") no-repeat;
+}
+
+.social-btn-vk::before {
+	width: 25px;
+    height: 16px;
+
+    background-position: -154px -2px;
+}
+
+.social-btn-vk:hover::before {
+    background-position: -183px -2px;
+}
+
+.social-btn-fb::before {
+	width: 12px;
+    height: 22px;
+
+    background-position: -72px -2px;
+}
+
+.social-btn-fb:hover::before {
+	background-position: -88px -2px;
+}
+
+.social-btn-inst::before {
+	width: 21px;
+    height: 21px;
+
+    background-position: -104px -2px;
+}
+
+.social-btn-inst:hover::before {
+	background-position: -129px -2px;
+}
+
+.main-footer-copyright {
+	float: right;
+	max-width: 160px;	
+
+	text-align: center;
+}
+
+.main-footer-copyright p {
+	margin-bottom: 15px;
+}
+
+.main-footer-copyright .btn:hover {
+	color: #000000;
+
+	background: #ffffff;
+}
+
+
+
+/* ---------- КАТАЛОГ ---------- */
+
+
+
+.inner-header {
+	margin-bottom: 50px;
+}
+
+.inner-header-breadcrumbs {
+	margin: 0;
+	margin-top: 25px;
+	padding: 0;
+
+	list-style: none;
+}
+
+.inner-header-breadcrumbs li {
+	position: relative;
+	display: inline-block;
+	padding-right: 24px;
+	margin-right: 15px;
+
+	color: #aba9a7;
+}
+
+.inner-header-breadcrumbs li:not(:last-child)::after {
+	content: "";
+	position: absolute;
+	right: 0;
+	top: 50%;
+	width: 8px;
+	height: 8px;
+	margin-top: -4px;
+	transform: rotate(45deg);
+
+	background: #000000;
+}
+
+.inner-header-breadcrumbs a {
+	text-decoration: none;
+	color: #000000;
+}
+
+.inner-content-left {
+	float: left;
+	width: 210px;
+}
+
+fieldset {
+	margin: 0;
+	margin-bottom: 37px;
+	padding: 0;
+	border: none;
+}
+
+legend {
+	margin: 0;
+	margin-bottom: 28px;
+	padding: 0;
+
+	font-size: 24px;
+}
+
+input[type="checkbox"] {
+	display: none;
+}
+
+input[type="checkbox"] + label {
+	position: relative;
+	display: block;
+	margin: 0;
+	margin-bottom: 13px;
+	padding: 0;
+	padding-left: 43px;
+
+	cursor: pointer;
+}
+
+input[type="checkbox"]:disabled + label {
+	opacity: 0.5;
+	cursor: auto;
+}
+
+input[type="checkbox"] + label:hover {
+	color: #663d15;
+}
+
+input[type="checkbox"]:disabled + label:hover {
+	color: #000000;
+}
+
+input[type="checkbox"] + label::before,
+input[type="checkbox"]:disabled + label::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 20px;
+	height: 20px;
+	margin-top: -10px;
+
+	background: url("../img/sprite.png") no-repeat;
+	background-position: -26px -2px;
+}
+
+input[type="checkbox"]:disabled + label::before {
+	opacity: 0.5;
+}
+
+input[type="checkbox"]:checked + label::before,
+input[type="checkbox"]:checked:disabled + label::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 20px;
+	height: 20px;
+	margin-top: -10px;
+
+	background: url("../img/sprite.png") no-repeat;
+	background-position: -2px -2px;
+}
+
+.filters .btn {
+	margin-top: 128px;
+}
+
+.inner-content-right {
 	width: auto;
 	margin-left: 240px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;	
 }
 
 .shop-list {
 	margin-bottom: 25px;
-
-	outline: 2px solid white;
+	padding-top: 2px;
 }
 
-.shop-item {
+.shop-list-item {
 	float: left;
-	min-height: 286px;
+	max-height: 286px;
 	width: 220px;
 	margin-right: 20px;
 	margin-bottom: 20px;
 
-	background: rgba(0, 0, 0, 0.15);
+	background: #ffffff;
+	box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
 }
 
-.shop-item:nth-child(3n) {
+.shop-list-item:hover {
+	box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.3);	
+}
+
+.shop-list-item:nth-child(3n) {
 	margin-right: 0;
 }
 
-.pagination {
-	min-height: 43px;
+a.shop-list-item-name {
+	display: block;
+	margin-top: 6px;
+	padding: 0 16px;
 
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;
+	text-transform: none;
+	text-decoration: none;
+	line-height: 18px;
+	color: #000000;
 }
 
-.main-footer {
-	margin-top: 49px;
-	padding-top: 60px;
-	padding-bottom: 39px;
+.shop-list-item-name span {
+	display: block;
 
-	background: rgba(255, 0, 0, 0.25);
+	text-transform: uppercase;
 }
 
-.footer-contacts {
+.buy-block {
+	margin: 13px 16px 18px;
+	max-width: 187px;
+
+	background: #e5e5e5;
+}
+
+.buy-block .price {
 	float: left;
-	min-height: 90px;
-	width: 320px;
-	margin-right: 60px;
+	width: 104px;
+	padding-top: 9px;
+	padding-left: 4px;
 
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;
+	text-align: center;
 }
 
-.footer-social {
-	float: left;
-	min-height: 90px;
-	max-width: 340px;
-	width: 180px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;
-}
-
-.footer-copyright {
+.buy-block a {
 	float: right;
-	min-height: 90px;
-	width: 160px;	
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;
+	padding-left: 18px;
+	padding-right: 18px;
 }
+
+.pagination ul {
+	margin: 0;
+	padding: 0;
+	
+	font-size: 0;
+
+	list-style: none;
+}
+
+.pagination li {
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	vertical-align: top;
+}
+
+.pagination a {
+	display: block;
+	margin-right: 7px;
+	padding: 9px 18px 10px;
+
+	text-decoration: none;
+	font-size: 14px;
+	color: #ffffff;
+
+	background: #000000;
+}
+
+.pagination a:hover {
+	background: #663d15;
+}
+
+.pagination .current {
+	margin-right: 7px;
+	padding: 9px 18px 10px;
+
+	text-decoration: none;
+	font-size: 14px;
+	color: #000000;
+
+	background: #ffffff;
+}
+
+
+
+/* ---------- СТРАНИЦА ТОВАРА ---------- */
+
+
 
 .item-photo-gallery {
 	float: left;
 	max-width: 460px;
 	padding: 0;
 	margin: 0;
+	margin-top: 3px;
 
 	font-size: 0;
-
-	background: rgba(255, 0, 0, 0.25);
 }
 
-.item-main-block {
-	float: right;
-	max-width: 400px;
-	margin: 0;
-	padding: 0;
-	padding-top: 25px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;	
-}
-
-.item-main-block .description {
-	margin-bottom: 40px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;	
-}
-
-.buy-block {
-	height: 43px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;		
-}
-
-.item-main-block .set-parts {
-	margin-top: 66px;
-
-	background: rgba(255, 0, 0, 0.25);
-	outline: 2px solid white;	
+.item-photo-gallery img {
+	box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
 }
 
 .item-photo-gallery .big {
@@ -222,8 +576,75 @@ figure {
 	margin-right: 20px;
 	padding: 0;
 	vertical-align: top;
+
+	cursor: pointer;
+}
+
+.item-photo-gallery .preview:hover {
+	box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.3);
 }
 
 .item-photo-gallery .preview:nth-child(3n+1) {
 	margin-right: 0;
+}
+
+.item-main-block {
+	float: right;
+	max-width: 380px;
+	margin: 0;
+	padding: 21px 10px 0;
+}
+
+.description {
+	margin-bottom: 36px;
+}
+
+.description header {
+	margin-bottom: 30px;
+}
+
+.description .availability {
+	float: left;
+	max-width: 230px;
+}
+.description .articul {
+	float: right;
+	max-width: 140px;
+
+	color: #aeaeae;
+}
+
+.item-main-block .buy-block {
+	margin: 0;
+	margin-bottom: 65px;
+}
+
+.set-parts .title {
+	margin-bottom: 30px;
+
+	font-size: 24px;
+}
+
+.set-parts ul {
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+}
+
+.set-parts li {
+	position: relative;
+	padding-left: 20px;
+}
+
+.set-parts li::before {
+	content: "";
+	position: absolute;
+	top: 8px;
+	left: 0;
+	width: 8px;
+	height: 8px;
+	transform: rotate(45deg);
+
+	background: #000000;
 }
