--- a/css/style.css
+++ b/css/style.css
@@ -370,11 +370,13 @@ legend {
 	font-size: 24px;
 }
 
-input[type="checkbox"] {
+input[type="checkbox"],
+input[type="radio"] {
 	display: none;
 }
 
-input[type="checkbox"] + label {
+input[type="checkbox"] + label,
+input[type="radio"] + label {
 	position: relative;
 	display: block;
 	margin: 0;
@@ -385,21 +387,24 @@ input[type="checkbox"] + label {
 	cursor: pointer;
 }
 
-input[type="checkbox"]:disabled + label {
+input[type="checkbox"]:disabled + label,
+input[type="radio"]:disabled + label  {
 	opacity: 0.5;
 	cursor: auto;
 }
 
-input[type="checkbox"] + label:hover {
+input[type="checkbox"] + label:hover,
+input[type="radio"] + label:hover {
 	color: #663d15;
 }
 
-input[type="checkbox"]:disabled + label:hover {
+input[type="checkbox"]:disabled + label:hover,
+input[type="radio"]:disabled + label:hover  {
 	color: #000000;
 }
 
 input[type="checkbox"] + label::before,
-input[type="checkbox"]:disabled + label::before {
+input[type="radio"] + label::before {
 	content: "";
 	position: absolute;
 	left: 0;
@@ -409,34 +414,36 @@ input[type="checkbox"]:disabled + label::before {
 	margin-top: -10px;
 
 	background: url("../img/sprite.png") no-repeat;
+}
+
+input[type="checkbox"] + label::before {
 	background-position: -26px -2px;
 }
 
-input[type="checkbox"]:disabled + label::before {
-	opacity: 0.5;
-}
-
-input[type="checkbox"]:checked + label::before,
-input[type="checkbox"]:checked:disabled + label::before {
-	content: "";
-	position: absolute;
-	left: 0;
-	top: 50%;
-	width: 20px;
-	height: 20px;
-	margin-top: -10px;
-
-	background: url("../img/sprite.png") no-repeat;
+input[type="checkbox"]:checked + label::before {
 	background-position: -2px -2px;
 }
 
+input[type="radio"] + label::before {
+	background-position: -236px -2px;
+}
+
+input[type="radio"]:checked + label::before {
+	background-position: -212px -2px;
+}
+
 .filters .btn {
-	margin-top: 128px;
+	margin-top: 17px;
 }
 
 .inner-content-right {
 	width: auto;
 	margin-left: 240px;
+}
+
+.ignore-left-column-height {
+	float: left;
+	width: 100%;
 }
 
 .shop-list {
